# discordAI--

./: .env.example  AGENT.md  AGENTS.md  README.md  pyproject.toml
.github/workflows/: digest.yml  maintenance.yml  polling.yml  preview.yml
docs/: github-actions-guide.md  system-architecture.md  作業サマリー_2026-02-06.md
src/ai_updates/: __init__.py  config.py  main.py  models.py  normalize.py  preview.py  sources.py  store.py  summarizer.py
src/ai_updates/collectors/: __init__.py  github_releases_collector.py  html_collector.py  http_utils.py
src/ai_updates/dispatchers/: discord.py
tests/: test_discord_dispatcher.py  test_html_collector.py  test_normalize.py
