[project]
name = "discord-ai-updates"
version = "0.1.0"
description = "Collect AI release updates and notify Discord"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "feedparser>=6.0.0",
]

[project.scripts]
ai-updates-once = "ai_updates.main:run_once_cli"
ai-updates-digest = "ai_updates.main:run_digest_cli"
ai-updates-preview = "ai_updates.preview:run_preview_cli"
ai-updates-maintenance = "ai_updates.main:run_maintenance_cli"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
